# emiolia

./: .gitignore  Cargo.toml  TODO.md  flake.nix  shell.nix
src/: app.rs  main.rs  transmission.rs
src/transmission/: mod.rs  rpc.rs
src/ui/: about.rs  macros.rs  mod.rs  preferences.rs  setup.rs  shortcuts.rs
